new error ersponse schema
