# src/main/kotlin/core/response/ErrorResponse.kt
@@ -1,0 +1,9 @@
+package pl.dev.bkwiatkowski.core.response
+
+import kotlinx.serialization.Serializable
+
+@Serializable
+data class ErrorResponse(
+  val businessCode: String,
+  val message: String,
+)
